--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "recepies",
+  "name": "recipes",
   "version": "0.0.0",
   "private": true,
   "type": "module",
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "axios": "^1.9.0",
     "element-plus": "^2.9.9",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
